# planogram

./: .env  .env.example  .gitignore  pyproject.toml  readme.md
app/: main.py  streamlit_app.py
app/models/: product.py
app/services/: augmentation.py  detection.py  embedding.py  planogram.py  supabase.py
app/workers/: tasks.py
migrations/: fix-similarity-column.sql  schema-1.sql  schemal.sql
